--- a/tp k3 l2.vcxproj.filters
+++ b/tp k3 l2.vcxproj.filters
@@ -21,9 +21,15 @@
     <ClCompile Include="order.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
+    <ClCompile Include="file_processor.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="order.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
+    <ClInclude Include="file_processor.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
   </ItemGroup>
